fix: no whitespace after tagname, therefore a little bit more padding

--- a/assets/css/tags.scss
+++ b/assets/css/tags.scss
@@ -56,7 +56,7 @@
 
   .cf-tag {
     position: relative;
-    padding-right: 1.25em;
+    padding-right: 1.5em;
 
     button {
       text-align: right;
